# Polaris-GEM-Car-AutoSummon-and-LaneDetection

./: README.md  rosBagLineFit.py
GEM_e2/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
GEM_e2/devel/include/zed_nodelets/: ZedConfig.h
GEM_e2/devel/lib/arena_camera/: arena_camera_node
GEM_e2/devel/lib/geonav_transform/: geonav_transform_node
GEM_e2/devel/lib/pkgconfig/: arena_camera.pc  basic_launch.pc  camera_control_msgs.pc  gem_description.pc  gem_gnss_control.pc  gem_gnss_image.pc  gem_pacmod_control.pc  gem_rviz_markers.pc  geonav_transform.pc  ouster_ros.pc  platform_launch.pc  zed_interfaces.pc  zed_nodelets.pc  zed_wrapper.pc
GEM_e2/src/: rosbag_record.txt
GEM_e2/src/basic_launch/launch/: test.launch
GEM_e2/src/platform_launch/rviz/: white_e2_text.rviz
auto_summon/: README.md  gen_waypoints.csv
auto_summon/src/: record.txt
auto_summon/src/basic_launch/rviz/: blue_e4_text.rviz
auto_summon/src/vehicle_drivers/gem_gnss_control/: CMakeLists.txt  package.xml
auto_summon/src/vehicle_drivers/gem_gnss_control/scripts/: auto_summon_backend_server.py  auto_summon_real.py  gem_gnss_tracker_pp.py  rrt.py
auto_summon/src/vehicle_drivers/gem_gnss_control/waypoints/: xyhead_demo_pp.csv
simulator_codes/: IRL_sensor_waypoints_heading.csv  IRL_sensor_waypoints_lat_lon.csv  IRL_sensor_waypoints_xy.csv  gen_waypoints.csv  sensor_waypoints.csv
simulator_codes/src/: README.md
simulator_codes/src/gem_simulator/gem_description/: package.xml
simulator_codes/src/vehicle_drivers/gem_pure_pursuit_sim/: CMakeLists.txt  package.xml
(+47 files in other folders)
